// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectorComponent should render InspectorComponent 0: test--0 1`] = `
Array [
  <div
    className="components-panel__body inspector-test is-opened"
  >
    <a
      href="http://example.com/test1"
      key="1---0/.0"
    >
      test1
    </a>
    <a
      href="http://example.com/test2"
      key="2---0/.0"
    >
      test2
    </a>
    <div
      className="additional-inspector-test1"
      key="additional-inspector-0"
    >
      test1
    </div>
    <div
      className="additional-inspector-test2"
      key="additional-inspector-1"
    >
      test2
    </div>
  </div>,
  Array [
    <div
      onMouseMove={[Function]}
    >
      <div
        className="block-editor-block-list__layout is-root-container"
        onDragStart={[Function]}
        onFocus={[Function]}
      >
        <div
          className="block-list-appender"
          onFocus={[Function]}
          tabIndex={-1}
        >
          <div
            className="wp-block block-editor-default-block-appender"
            data-root-client-id=""
          >
            <textarea
              aria-label="Add block"
              className="block-editor-default-block-appender__content"
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={true}
              role="button"
              rows={1}
              value="Start writing or type / to choose a block"
            />
            <div
              className="components-dropdown block-editor-inserter"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                aria-label="Add block"
                className="components-button block-editor-inserter__toggle has-icon"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>,
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`InspectorComponent should render InspectorComponent 1: test--1 1`] = `
Array [
  <div
    className="components-panel__body inspector-test"
  />,
  Array [
    <div
      onMouseMove={[Function]}
    >
      <div
        className="block-editor-block-list__layout is-root-container"
        onDragStart={[Function]}
        onFocus={[Function]}
      >
        <div
          className="block-list-appender"
          onFocus={[Function]}
          tabIndex={-1}
        >
          <div
            className="wp-block block-editor-default-block-appender"
            data-root-client-id=""
          >
            <textarea
              aria-label="Add block"
              className="block-editor-default-block-appender__content"
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={true}
              role="button"
              rows={1}
              value="Start writing or type / to choose a block"
            />
            <div
              className="components-dropdown block-editor-inserter"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                aria-label="Add block"
                className="components-button block-editor-inserter__toggle has-icon"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>,
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`InspectorComponent should render InspectorComponent 2: test--2 1`] = `
Array [
  "",
  Array [
    <div
      onMouseMove={[Function]}
    >
      <div
        className="block-editor-block-list__layout is-root-container"
        onDragStart={[Function]}
        onFocus={[Function]}
      >
        <div
          className="block-list-appender"
          onFocus={[Function]}
          tabIndex={-1}
        >
          <div
            className="wp-block block-editor-default-block-appender"
            data-root-client-id=""
          >
            <textarea
              aria-label="Add block"
              className="block-editor-default-block-appender__content"
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={true}
              role="button"
              rows={1}
              value="Start writing or type / to choose a block"
            />
            <div
              className="components-dropdown block-editor-inserter"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                aria-label="Add block"
                className="components-button block-editor-inserter__toggle has-icon"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>,
    "",
    Array [
      "",
      "",
    ],
  ],
]
`;
